--- a/FragmentLifecycleExample/app/src/main/res/layout/fragment_one.xml
+++ b/FragmentLifecycleExample/app/src/main/res/layout/fragment_one.xml
@@ -4,4 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/fragment1_text1"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
 </LinearLayout>
