--- a/FragmentLifecycleExample/app/src/main/res/layout/fragment_two.xml
+++ b/FragmentLifecycleExample/app/src/main/res/layout/fragment_two.xml
@@ -4,4 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/fragment2_text1"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
 </LinearLayout>
