change color of heading to dark blue

--- a/FragmentLifecycleExample/app/src/main/res/layout/activity_main.xml
+++ b/FragmentLifecycleExample/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/heading"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_green_light"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="24sp"
         android:textStyle="bold" />
 
